<resources>
    <string name="app_name">Notable</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_notes">My Notes</string>
    <string name="menu_guitars">My Guitars</string>
    <string name="menu_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_profile">Your Profile</string>
    <string name="evan_brill">Evan Brill</string>
    <string name="user_icon">User Icon</string>
    <string name="_21_years_old">21 Years Old</string>
    <string name="sumbit">Sumbit</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="logout">Logout</string>
    <string name="your_name">Your Name</string>
    <string name="change_photo">Change Photo</string>
    <string name="loading_text">Loading...</string>
</resources>