<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:layout_above="@+id/name"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_profile"/>


    <TextView
        android:id="@+id/name"
        android:textSize="28sp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/center_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/evan_brill"
        android:drawablePadding="4dp"/>


    <ImageView
        android:id="@+id/center_image"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_baseline_person_24"
        android:contentDescription="@string/user_icon" />


    <Button
        android:id="@+id/logout_button"
        android:layout_below="@id/center_image"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/logout"/>

    <Button
        android:id="@+id/edit_button"
        android:layout_below="@id/center_image"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/edit"/>
</RelativeLayout>