<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_guitars_list">

    <fragment
        android:id="@+id/nav_profile"
        android:name="edu.rosehulman.notable.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_notes"
        android:name="edu.rosehulman.notable.ui.notes.NotesListFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_notes_list" />

    <fragment
        android:id="@+id/nav_guitars_list"
        android:name="edu.rosehulman.notable.ui.guitars.GuitarsListFragment"
        android:label="@string/menu_guitars"
        tools:layout="@layout/fragment_guitars_list" />

    <fragment
        android:id="@+id/nav_guitars_edit"
        android:name="edu.rosehulman.notable.ui.guitars.GuitarsEditFragment"
        android:label="@string/menu_guitars"
        tools:layout="@layout/fragment_guitars_edit" />

    <fragment
        android:id="@+id/nav_guitars_detail"
        android:name="edu.rosehulman.notable.ui.guitars.GuitarsDetailFragment"
        android:label="@string/menu_guitars"
        tools:layout="@layout/fragment_guitars_detail" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="edu.rosehulman.notable.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>